--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -6,6 +6,7 @@ tap "homebrew/core"
 tap "homebrew/services"
 tap "railwaycat/emacsmacport"
 brew "jpeg-xl"
+brew "bat"
 brew "colordiff"
 brew "curl"
 brew "php"
