--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -7,6 +7,7 @@ tap "homebrew/services"
 tap "railwaycat/emacsmacport"
 brew "jpeg-xl"
 brew "bat"
+brew "fzf"
 brew "colordiff"
 brew "curl"
 brew "php"
