--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -7,20 +7,23 @@ tap "homebrew/services"
 tap "railwaycat/emacsmacport"
 brew "jpeg-xl"
 brew "bat"
-brew "fzf"
 brew "colordiff"
 brew "curl"
 brew "php"
 brew "composer"
 brew "exa"
+brew "fzf"
 brew "gh"
 brew "git"
+brew "go"
 brew "mas"
 brew "mysql", restart_service: true
 brew "neovim", args: ["HEAD"]
 brew "node"
+brew "phpunit"
 brew "plantuml"
 brew "ripgrep"
+brew "rust"
 brew "starship"
 brew "zsh-autosuggestions"
 brew "zsh-completions"
@@ -39,10 +42,13 @@ cask "gimp"
 cask "google-chrome"
 cask "google-drive"
 cask "iterm2"
+cask "jetbrains-toolbox"
 cask "keyboardcleantool"
 cask "notion"
 cask "obsidian"
+cask "pgadmin4"
 cask "phpstorm"
+cask "postman"
 cask "raycast"
 cask "slack"
 cask "spotify"
