--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,9 +1,8 @@
 tap "1password/tap"
 tap "homebrew/bundle"
-tap "homebrew/cask"
 tap "homebrew/cask-fonts"
-tap "homebrew/core"
 tap "homebrew/services"
+tap "oven-sh/bun"
 tap "railwaycat/emacsmacport"
 brew "jpeg-xl"
 brew "bat"
@@ -11,6 +10,7 @@ brew "colordiff"
 brew "curl"
 brew "php"
 brew "composer"
+brew "deno"
 brew "exa"
 brew "fzf"
 brew "gh"
@@ -28,6 +28,7 @@ brew "starship"
 brew "zsh-autosuggestions"
 brew "zsh-completions"
 brew "zsh-history-substring-search"
+brew "oven-sh/bun/bun"
 brew "railwaycat/emacsmacport/emacs-mac", link: false
 cask "1password-cli"
 cask "alfred"
@@ -54,6 +55,7 @@ cask "slack"
 cask "spotify"
 cask "visual-studio-code"
 cask "zoom"
+mas "Bear", id: 1091189122
 mas "Kindle", id: 405399194
 mas "LINE", id: 539883307
 mas "Magnet", id: 441258766
